@@ -1,19 +1,19 @@
-b5a4a9b2b0accbf59c6f8a8c6a351d0f *ChangeLog
-2ee6482ff5dacfb814055a667d81331d *DESCRIPTION
+82ed26cf02b451b2c43bdfa41168628c *ChangeLog
+912ab862b9c807b4c2c3d5c39ecb0f19 *DESCRIPTION
 8c6df9c956e3d0c17e72cb1cb038adee *NAMESPACE
-61194d95db6e32f167859580d59d804f *R/get_facebook.R
+2835f738ab06e7170bfdca6dfd7079e8 *R/get_facebook.R
 0b097d2e6ff6e616651f96d4512bf53a *R/get_linkedin.R
 d24a1728e85995c35d7c6e4f65a3a32b *R/get_pinterest.R
-baa5b6e3ed87e9806e3acf6878f8ad23 *R/get_reddit.R
-cb70c271ddc552b5dbfe3db6a13b1e7e *R/get_socialmedia.R
+6871040c01d8691a614fd9365900697c *R/get_reddit.R
+d917025c25d97c193379971f1ea5d908 *R/get_socialmedia.R
 a653d81005f20130296c7245955c5ba8 *R/get_stumbleupon.R
 680742948678bdcdbb62652f2053e333 *R/get_url.R
 c6b37bbda83c5ae4c509ed9d3b7efdd3 *inst/CITATION
-06faa3427c767b27568af99305949969 *man/SocialMediaMineR-package.Rd
-629dbbd8b7aaee3840f33f596b14fe3f *man/get_facebook.Rd
-60215f81ea557d4460a4aa0b810295cc *man/get_linkedin.Rd
-7c1df177822e427f15c0fd720a72e7af *man/get_pinterest.Rd
-4de153de92eb5535a5b9000c99628447 *man/get_reddit.Rd
-1cabf01491a1da38917ac79b9cc6ccd8 *man/get_socialmedia.Rd
-5931478e6b050f33a6c888bf7ccef07f *man/get_stumbleupon.Rd
-08852cad32253421a0de8f0ad2d57133 *man/get_url.Rd
+b652565bbcc9adc934c2010a7d621bd4 *man/SocialMediaMineR-package.Rd
+fdf54cab2fb81cd9616e76818be5e4d4 *man/get_facebook.Rd
+1c50db814861f99d1c673c0d63dfff5c *man/get_linkedin.Rd
+2b9cf80575f2805ac2e082201a5f52a0 *man/get_pinterest.Rd
+c77b145639307af0a4a9d04af9a9e2d1 *man/get_reddit.Rd
+5973dc8330e85677a2aac577b27520cd *man/get_socialmedia.Rd
+5af445c19e163ceebef0f12a4db138fa *man/get_stumbleupon.Rd
+b4115fe0bba83ac410be95e02335df02 *man/get_url.Rd
