@@ -21,10 +21,10 @@ Number of seconds the function will wait before proceeding to the next URL (opti
 It returns a data frame with forty columns associated the performance of the URL on Reddit. The columns are: domain, banned_by, media_embed, subreddit, selftext_html, selftext, likes, secure_media, link_flair_text, id, gilded, secure_media_embed, clicked, stickied, author, media, score, approved_by, over_18, hidden, thumbnail, subreddit_id, edited, link_flair_css_class, author_flair_css_class, downs, saved, is_self, permalink, name, created, url, author_flair_text, title, created_utc, ups, num_comments, visited, num_reports, and distinguished.
 }
 \references{
-The Reddit API documentation is available at http://www.reddit.com/dev/api
+The Reddit API documentation is available at <http://www.reddit.com/dev/api>
 }
 \author{
-Marco T. Bastos
+Marco Bastos
 }
 \examples{
 get_reddit("http://i.imgur.com/rSnA8.png")
